--- a/O1-pcf-hello-world-service/pom.xml
+++ b/O1-pcf-hello-world-service/pom.xml
@@ -38,6 +38,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>hello-world-rest-api</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
