--- a/O1-pcf-hello-world-service/manifest.yml
+++ b/O1-pcf-hello-world-service/manifest.yml
@@ -4,7 +4,10 @@ applications:
   instances: 1
   memory: 1G
   path: target/hello-world-rest-api.jar
+  timeout: 120
   routes:
   - route: hello-world-rest-api-relaxed-gorilla-pn.cfapps.io
   - route: hello-world-rest-api-mari.cfapps.io
+  buildpacks:
+  - https://github.com/cloudfoundry/java-buildpack.git
   stack: cflinuxfs3
